More z-index fixes

--- a/source/assets/stylesheets/base/_variables.scss
+++ b/source/assets/stylesheets/base/_variables.scss
@@ -60,6 +60,9 @@ $z-index-6: 600;
 $z-index-7: 700;
 $z-index-8: 800;
 $z-index-9: 900;
+$z-index-10: 1000;
+$z-index-11: 1100;
+$z-index-12: 1200;
 
 // Needed to override leaflet controls
-$z-index-max: 1100;
+$z-index-max: 1200;
